--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -113,7 +113,7 @@
         android:hint="Password"
         android:textColorHint="#ffffff"
         android:background="@drawable/box"
-        android:inputType="textPassword"
+
         android:layout_marginLeft="16sp"
         android:layout_marginRight="16sp"/>
 
@@ -132,7 +132,7 @@
         android:hint="Confirm Password"
         android:textColorHint="#ffffff"
         android:background="@drawable/box"
-        android:inputType="textPassword"
+
         android:layout_marginLeft="16sp"
         android:layout_marginRight="16sp"/>
 
@@ -205,7 +205,6 @@
             android:hint="Residing In"
             android:textColorHint="#ffffff"
             android:background="@drawable/box"
-            android:inputType="number"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"/>
 
@@ -226,12 +225,13 @@
             android:hint="Native (Hometown)"
             android:textColorHint="#ffffff"
             android:background="@drawable/box"
-            android:inputType="number" />
+            />
 
+<!--
 
         <io.apptik.widget.multiselectspinner.MultiSelectSpinner
             android:id="@+id/languages"
-
+            android:text="Select known languages"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="16sp"
@@ -241,6 +241,7 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:background="@drawable/box"/>
+-->
 
     <Spinner
         android:id="@+id/spinner"
