--- a/app/src/main/res/layout/activity_signup3.xml
+++ b/app/src/main/res/layout/activity_signup3.xml
@@ -23,12 +23,12 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginTop="30sp"
                 android:layout_alignParentTop="true"
-                android:text="Choose your answer:"
+                android:layout_marginBottom="10sp"
+                android:layout_marginTop="30sp"
+                android:text="Please fill in the details"
                 android:textSize="15sp"
-                android:layout_marginBottom="10sp"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/questions"
