Profile View altered

--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rakesh.profileview.MainActivity"
     android:background="@mipmap/wall"
     android:padding="10sp">
 
@@ -34,9 +31,8 @@
 
                     <ImageView
                         android:id="@+id/MainImage"
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="240sp"
+                        android:layout_height="240sp"
                         android:scaleType="centerCrop"/>
 
                     <ImageView
@@ -168,17 +164,88 @@
 
             </RelativeLayout>
 
-
-
-            <TextView
-                android:layout_width="200dp"
-                android:layout_height="85dp"
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/BottomImagesLayout"
-                android:layout_alignParentRight="true"
-                android:text="APPEND DETAILS FROM API HERE"
-                android:padding="10sp"
-                android:gravity="center"
-                android:scrollbars="vertical"/>
+                android:layout_alignParentRight="true">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10sp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Anisha Jain"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Female - Model"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Height: 165 cm"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Weight: 58 kgs"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Body Type: Athletic"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Chest Size: 35 inches"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dance: Bharatanaytam"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hair Color: Black"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Home Town: Chennai"
+                        android:textSize="15sp"
+                        android:paddingTop="3sp"/>
+
+                </LinearLayout>
+
+            </ScrollView>
+
+
+
 
         </RelativeLayout>
 
