--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -238,6 +238,7 @@
 
 
         <LinearLayout
+            android:id="@+id/phonelayout"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent">
@@ -269,15 +270,13 @@
         android:id="@+id/button3"
         android:layout_width="360dp"
         android:layout_height="40dp"
-        android:layout_below="@id/textView5"
         android:layout_marginTop="110dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button_round"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:text="Next"
-
-        android:textColor="#ffff" />
+        android:textColor="#ffffff" />
 
 
 </LinearLayout>
