--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -236,7 +236,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Home Town: Chennai"
+                        android:text="City: Chennai"
                         android:textSize="15sp"
                         android:paddingTop="3sp"/>
 
