--- a/app/src/main/res/layout/activity_signup4.xml
+++ b/app/src/main/res/layout/activity_signup4.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/wall"
-    tools:context="com.example.iyashwant.spiderprojectprototype.signup4"
+    tools:context="com.example.iyashwant.spiderprojectprototype.Registration.signup4"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
