--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@mipmap/ic_launcher"
+    android:background="#000000"
     android:gravity="bottom"
-    android:orientation="vertical"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:orientation="horizontal"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:weightSum="2">
+
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:id="@+id/nav_pic"
+        android:layout_width="0sp"
+        android:layout_weight="1"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/gradient" />
+        android:padding="20dp"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <TextView
-        android:layout_width="match_parent"
+
+
+    <LinearLayout
+        android:layout_width="0sp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="20dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:padding="16sp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="24 Crafts"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="20sp" />
+        android:layout_gravity="center_vertical">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/nav_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:layout_marginBottom="10sp"/>
+
+        <TextView
+            android:id="@+id/nav_craft"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Craft"
+            android:textColor="#ffffff"
+            android:textSize="15sp"/>
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
