--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -3,21 +3,45 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/profile"
+            android:icon="@drawable/profile"
+            android:title="View/Edit Profile" />
+        <item
+            android:id="@+id/inbox"
+            android:icon="@drawable/inbox"
+            android:title="Inbox" />
+        <item
             android:id="@+id/auditions"
             android:icon="@drawable/auditions"
             android:title="Auditions" />
+        <item
+            android:id="@+id/newsfeed"
+            android:icon="@drawable/newsfeed"
+            android:title="News Feed" />
+        <item
+            android:id="@+id/nearby"
+            android:icon="@drawable/location"
+            android:title="People Nearby" />
         <item
             android:id="@+id/encounters"
             android:icon="@drawable/people"
             android:title="Encounters" />
         <item
-            android:id="@+id/nearby"
-            android:icon="@drawable/book"
-            android:title="People Nearby" />
-        <item
             android:id="@+id/directory"
             android:icon="@drawable/contact"
             android:title="Directory" />
+        <item
+            android:id="@+id/promote"
+            android:icon="@drawable/promote"
+            android:title="Promote Your Profile" />
+        <item
+            android:id="@+id/subscribe"
+            android:icon="@drawable/subscribe"
+            android:title="Subscribe" />
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/settings"
+            android:title="Settings" />
     </group>
 
     <item android:title="Recommended Profiles">
