--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="25dp"
     android:paddingRight="25dp"
-    >
+    tools:context="com.example.iyashwant.spiderprojectprototype.Directory.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
