--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+
     android:orientation="vertical"
-    tools:context="com.example.rakesh.directory.MainActivity">
+    android:background="#002200"
+    tools:context="com.example.iyashwant.spiderprojectprototype.Directory.contacts">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/heading"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textAllCaps="true"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="40dp"
         android:text="heading"/>
 
-<android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/rv3"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv3"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-</android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>
 
-    </LinearLayout>
+</LinearLayout>
