--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -30,31 +30,37 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <ImageView
+        <ImageButton
             android:layout_width="59dp"
             android:layout_height="59dp"
             android:src="@drawable/facebook"
-            android:id="@+id/imageView"
-            android:clickable="true"
+            android:id="@+id/fb_login_button"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:background="#00000000"
             android:layout_marginBottom="21dp"
             android:layout_marginLeft="25dp"
             android:layout_marginStart="25dp" />
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/gl_login_button"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:src="@drawable/google"
-            android:clickable="true"
-            android:id="@+id/imageView2"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:background="#00000000"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp" />
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/inst_login_button"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:clickable="true"
             android:src="@drawable/insta"
-            android:id="@+id/imageView3"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:background="#00000000"
             android:layout_marginLeft="19dp" />
 
     </LinearLayout>
@@ -104,7 +110,7 @@
 
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item1"
+            android:id="@+id/action_email_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_email"
@@ -116,7 +122,7 @@
 
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item2"
+            android:id="@+id/action_sign_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_sign"
@@ -129,7 +135,7 @@
 
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item4"
+            android:id="@+id/action_exit_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_colorNormal="#ff004e"
