--- a/app/src/main/res/layout/applied_auditions_tab.xml
+++ b/app/src/main/res/layout/applied_auditions_tab.xml
@@ -2,15 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="136dp"
-        android:layout_marginRight="136dp"
-        android:layout_marginTop="263dp"
-        android:text="Applied Auditions Tab" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/open_auditions_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
