--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/wall"
     android:paddingLeft="25dp"
     android:paddingRight="25dp"
     tools:context="com.example.iyashwant.spiderprojectprototype.DirectoryFragment">
