--- a/app/src/main/res/layout/inbox_tab.xml
+++ b/app/src/main/res/layout/inbox_tab.xml
@@ -6,6 +6,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
+
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:layout_height="wrap_content"
         android:id="@+id/recy">
 
