--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
-    android:layout_marginTop="15dp">
+    android:background="#ffff"
+    android:paddingTop="10dp"
+    android:layout_marginTop="6dp">
 
     <ImageView
         android:layout_width="70dp"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NAME"
+            android:textColor="#000000"
             android:layout_toRightOf="@id/IMG"
             android:textStyle="bold"
             android:textSize="16dp"
@@ -27,6 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:text="MEETING!!"
             android:layout_marginBottom="3dp"
             android:layout_below="@id/name"
@@ -37,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Has been a long time."
+            android:textColor="@color/grey"
             android:layout_toRightOf="@id/IMG"
             android:textSize="10dp"
             android:layout_below="@id/subject"
@@ -45,15 +49,17 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/time"
+          android:textColor="#000000"
           android:text="2h"
           android:layout_alignParentRight="true"
           android:layout_marginRight="25dp"
           android:layout_marginBottom="5dp"/>
     <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_below="@id/time"
-
+        android:background="#00FFFFFF"
+        android:tint="#000000"
         android:src="@drawable/delete"
         android:id="@+id/trash"
         android:layout_marginRight="20dp"
@@ -61,28 +67,20 @@
 
         />
     <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:id="@+id/starred"
+        android:background="#00FFFFFF"
 
         android:layout_marginRight="10dp"
         android:scaleType="fitXY"
         android:layout_marginBottom="20dp"
         android:src="@drawable/star_empty"
+        android:tint="#000000"
         android:layout_below="@id/time"
         android:layout_toLeftOf="@id/trash"
 
-
         />
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/IMG"
-
-    android:text="                     ___________________________"/>
-
-
 
 </RelativeLayout>
 
