--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -8,4 +8,10 @@
     tools:context="com.example.iyashwant.spiderprojectprototype.Main3Activity"
     tools:showIn="@layout/app_bar_main3">
 
+    <FrameLayout
+        android:id="@+id/content_frame_clients"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
