--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -6,11 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.rakesh.navbar.Main2Activity"
     tools:showIn="@layout/app_bar_main2">
 
     <FrameLayout
-        android:id="@+id/content_frame"
+        android:id="@+id/content_frame_crafts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
