--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#000000"
+    android:background="#50000000"
     android:gravity="bottom"
     android:orientation="horizontal"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -50,7 +50,8 @@
             android:id="@+id/profile_edits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#10ffffff"
+            android:background="#00ffffff"
+            android:padding="10sp"
             android:src="@drawable/edit_white" />
 
     </LinearLayout>
