--- a/app/src/main/res/layout/nav_header_main3.xml
+++ b/app/src/main/res/layout/nav_header_main3.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
-    android:background="#000000"
+    android:layout_height="220dp"
+    android:background="#50000000"
     android:orientation="vertical"
     android:weightSum="4"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="3"
+        android:layout_weight="3.25"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -21,7 +21,7 @@
             android:layout_width="0sp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:padding="20dp"
+            android:padding="25sp"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
 
@@ -40,7 +40,8 @@
                 android:layout_marginBottom="10sp"
                 android:text="Name"
                 android:textColor="#ffffff"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_marginTop="20sp"/>
 
             <TextView
                 android:id="@+id/nav_craft"
@@ -56,7 +57,8 @@
                 android:id="@+id/profile_edits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#10ffffff"
+                android:background="#00ffffff"
+                android:padding="10sp"
                 android:src="@drawable/edit_white" />
 
         </LinearLayout>
@@ -66,10 +68,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="1"
-        android:background="#ffffff">
+        android:layout_weight="0.75"
+        android:weightSum="3"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/aud_handy"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/aud_handy"
+            android:scaleType="fitCenter"
+            android:layout_margin="5sp"/>
 
+        <ImageView
+            android:id="@+id/fav_handy"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/fav_handy"
+            android:scaleType="fitCenter"
+            android:layout_margin="5sp"/>
+
+        <ImageView
+            android:id="@+id/inbox_handy"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/inbox_handy"
+            android:scaleType="fitCenter"
+            android:layout_margin="5sp"/>
 
     </LinearLayout>
 
