avi 24nov - 3 - client dashboard updates

--- a/app/src/main/res/menu/activity_main3_drawer.xml
+++ b/app/src/main/res/menu/activity_main3_drawer.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/dashboard"
+            android:icon="@drawable/dashboard"
+            android:title="Dashboard" />
+        <item
             android:id="@+id/talent_hunt"
             android:icon="@drawable/talent_hunt"
             android:title="Talent Hunter - Cast &amp; Crew" />
