--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:id="@+id/coinsfree"
+        android:onClick="freecoins"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Free Coins"
