--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -12,29 +12,28 @@
 
     <RelativeLayout
         android:id="@+id/layout1"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="90dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
-        <!--
+
         <ImageView
             android:id="@+id/imgview"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_twentyfour"
+            android:layout_width="1250dp"
+            android:layout_height="150dp"
+            android:src="@drawable/logo"
             android:layout_centerHorizontal="true"/>
-            -->
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Who are you?"
-            android:textColor="#e2e2e2"
-            android:layout_marginTop="150dp"
+            android:textColor="#bebebe"
+            android:layout_marginTop="190dp"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_below="@id/imgview"/>
+            />
 
     </RelativeLayout>
 
