--- a/app/src/main/res/layout/tinder_swipe_in_msg_view.xml
+++ b/app/src/main/res/layout/tinder_swipe_in_msg_view.xml
@@ -4,12 +4,12 @@
     android:layout_height="425dp"
     android:orientation="vertical">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
+        android:paddingTop="150dp"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
-        android:text="Accept"
-        android:textColor="@android:color/holo_green_light"
+       android:src="@drawable/ic_heart"
         android:textSize="32sp"
         android:textStyle="bold" />
 </LinearLayout>
