--- a/app/src/main/res/layout/tinder_swipe_out_msg_view.xml
+++ b/app/src/main/res/layout/tinder_swipe_out_msg_view.xml
@@ -5,12 +5,12 @@
     android:gravity="right"
     android:orientation="vertical">
 
-    <TextView
+    <ImageView
+        android:paddingTop="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
-        android:text="Reject"
-        android:textColor="@android:color/holo_red_light"
+        android:src="@drawable/ic_cancel"
         android:textSize="32sp"
         android:textStyle="bold" />
 </LinearLayout>
