--- a/app/src/main/res/layout/activity_dashboard_auditions_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_auditions_tab_fragment.xml
@@ -4,11 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.iyashwant.spiderprojectprototype.DashboardAuditionsTabFragment">
+    tools:context="com.example.iyashwant.spiderprojectprototype.DashboardAuditionsTabFragment"
+    android:orientation="vertical">
 
-    <TextView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/client_auditions_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Auditions page for clients"/>
+        app:tabMode="fixed"
+        app:tabGravity="fill"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/client_auditions_tabbed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
