--- a/app/src/main/res/layout/audition_rv_item.xml
+++ b/app/src/main/res/layout/audition_rv_item.xml
@@ -10,22 +10,20 @@
 
     <ImageView
         android:id="@+id/audition_photo"
-        android:layout_width="match_parent"
+        android:layout_width="379dp"
         android:layout_height="250dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
         android:src="@drawable/audition_sample"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
 
     <TextView
         android:id="@+id/audition_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Placeholder Title"
         android:textColor="#777777"
@@ -35,41 +33,38 @@
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audition_photo"
-        android:layout_marginLeft="8dp" />
+        tools:layout_editor_absoluteX="8dp" />
 
     <Switch
         android:id="@+id/audition_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="269dp"
-        android:layout_marginRight="8dp" />
+        tools:layout_editor_absoluteX="347dp" />
 
     <TextView
         android:id="@+id/audition_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:text="Location: Someplace"
         android:textSize="14sp"
         android:textColor="#777777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audition_title"
-        android:layout_marginLeft="8dp" />
+        tools:layout_editor_absoluteX="8dp" />
 
     <TextView
         android:id="@+id/no_of_applicants_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:layout_marginStart="8dp"
         android:text="Total Applications:"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="#777777"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="8dp" />
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
