--- a/app/src/main/res/layout/single_item_trash.xml
+++ b/app/src/main/res/layout/single_item_trash.xml
@@ -54,33 +54,17 @@
           android:layout_alignParentRight="true"
           android:layout_marginRight="25dp"
           android:layout_marginBottom="5dp"/>
-
+    
     <ImageButton
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_below="@id/time"
         android:background="#00FFFFFF"
         android:tint="#000000"
-        android:src="@drawable/delete"
-        android:id="@+id/trash"
+        android:src="@drawable/undo"
+        android:id="@+id/undelete"
         android:layout_marginRight="20dp"
         android:layout_alignParentRight="true"
-        />
-
-    <ImageButton
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/starred"
-        android:background="#00FFFFFF"
-
-        android:layout_marginRight="10dp"
-        android:scaleType="fitXY"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/star_empty"
-        android:tint="#000000"
-        android:layout_below="@id/time"
-        android:layout_toLeftOf="@id/trash"
-
         />
 
 </RelativeLayout>
