--- a/app/src/main/res/layout/trash_tab.xml
+++ b/app/src/main/res/layout/trash_tab.xml
@@ -2,15 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView7"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/recy_trash"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_trash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/clear_all"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="142dp"
-        android:layout_marginRight="142dp"
-        android:layout_marginTop="229dp"
-        android:text="trash tab" />
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
