--- a/app/src/main/res/layout/activity_client_dashboard.xml
+++ b/app/src/main/res/layout/activity_client_dashboard.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -26,5 +26,5 @@
 
     </android.support.v4.view.ViewPager>
 
-</RelativeLayout>
+</LinearLayout>
 
