--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,13 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawerlayout">
+    android:id="@+id/drawerlayout"
+    android:background="@mipmap/blur">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/framelayout"></FrameLayout>
+        android:id="@+id/framelayout"/>
 
     <ListView
         android:layout_width="100dp"
