--- a/app/src/main/res/layout/activity_people_nearby.xml
+++ b/app/src/main/res/layout/activity_people_nearby.xml
@@ -44,20 +44,20 @@
 
     </RelativeLayout>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageView2"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/taigamod6"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"/>
 
 
-    <ImageView
-        android:background="@drawable/imgborder"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="52sp"
+        android:layout_height="52sp"
         android:layout_marginBottom="31dp"
         app:srcCompat="@drawable/icon_circle_blue"
         android:layout_marginLeft="14dp"
@@ -68,12 +68,11 @@
         android:layout_toRightOf="@+id/imageView2"
         android:layout_toEndOf="@+id/imageView2" />
 
-    <ImageView
-        android:background="@drawable/imgborder"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView4"
         android:src="@drawable/taigamod2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="52sp"
+        android:layout_height="52sp"
         android:layout_alignBottom="@id/relativeLayout"
         android:layout_alignLeft="@id/relativeLayout"
         android:layout_alignStart="@id/relativeLayout"
@@ -83,22 +82,20 @@
         android:layout_marginStart="62dp"
         app:srcCompat="@drawable/icon_circle_1" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView5"
-        android:background="@drawable/imgborder"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="52sp"
+        android:layout_height="52sp"
         android:layout_alignBottom="@+id/imageView7"
         android:layout_marginBottom="15dp"
         android:visibility="invisible"
         android:src="@drawable/taigamod3"
         app:srcCompat="@drawable/icon_circle_orange" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView6"
-        android:background="@drawable/imgborder"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="52sp"
+        android:layout_height="52sp"
         android:layout_marginBottom="44dp"
         android:layout_marginLeft="11dp"
         android:layout_marginStart="11dp"
@@ -109,11 +106,10 @@
         android:layout_alignLeft="@id/imageView4"
         android:layout_alignStart="@id/imageView4" />
 
-    <ImageView
-        android:background="@drawable/imgborder"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView7"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="52sp"
+        android:layout_height="52sp"
         app:srcCompat="@drawable/icon_circle_blue"
         android:visibility="invisible"
         android:layout_alignTop="@+id/imageView4"
