--- a/app/src/main/res/layout/single_item_trash.xml
+++ b/app/src/main/res/layout/single_item_trash.xml
@@ -6,66 +6,68 @@
     android:paddingTop="10dp"
     android:layout_marginTop="6dp">
 
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="50dp"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/IMG"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="20dp"
-        android:src="@mipmap/ic_launcher_round"
-        android:background="@drawable/circle_r"/>
+        android:layout_width="80sp"
+        android:layout_height="60sp"
+        android:src="@drawable/sample1"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="10sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NAME"
-            android:textColor="#000000"
-            android:layout_toRightOf="@id/IMG"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            android:id="@+id/name"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="MEETING!!"
-            android:layout_marginBottom="3dp"
-            android:layout_below="@id/name"
-            android:layout_toRightOf="@id/IMG"
-            android:textSize="12dp"
-            android:id="@+id/subject"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Has been a long time."
-            android:textColor="@color/grey"
-            android:layout_toRightOf="@id/IMG"
-            android:textSize="10dp"
-            android:layout_below="@id/subject"
-            android:id="@+id/body"/>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/time"
-          android:textColor="#000000"
-          android:text="2h"
-          android:layout_alignParentRight="true"
-          android:layout_marginRight="25dp"
-          android:layout_marginBottom="5dp"/>
-    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NAME"
+        android:textColor="#000000"
+        android:layout_toRightOf="@id/IMG"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:id="@+id/name"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:text="MEETING!!"
+        android:layout_marginBottom="3dp"
+        android:layout_below="@id/name"
+        android:layout_toRightOf="@id/IMG"
+        android:textSize="12dp"
+        android:id="@+id/subject"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Has been a long time."
+        android:textColor="@color/grey"
+        android:layout_toRightOf="@id/IMG"
+        android:textSize="10dp"
+        android:layout_below="@id/subject"
+        android:id="@+id/body"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:textColor="#000000"
+        android:text="2h"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="5dp"/>
+
+
     <ImageButton
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_below="@id/time"
         android:background="#00FFFFFF"
         android:tint="#000000"
         android:src="@drawable/undo"
         android:id="@+id/undelete"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        />
+        android:layout_alignTop="@+id/body"
+        android:layout_alignLeft="@+id/time"
+        android:layout_alignStart="@+id/time" />
+
 
 </RelativeLayout>
 
