--- a/app/src/main/res/layout/activity_auditions_tab.xml
+++ b/app/src/main/res/layout/activity_auditions_tab.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
+        android:background="#323232"
         app:tabGravity="fill">
 
     </android.support.design.widget.TabLayout>
