--- a/app/src/main/res/layout/activity_signup3.xml
+++ b/app/src/main/res/layout/activity_signup3.xml
@@ -7677,7 +7677,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button_3_craft"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
