--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.iyashwant.spiderprojectprototype.DisplayProfile">
+    android:background="@mipmap/blur">
 
     <RelativeLayout
         android:layout_width="match_parent"
