--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,57 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@mipmap/wall"
-    android:layout_height="match_parent"
-    tools:context="com.example.iyashwant.spiderprojectprototype.Login"
+    tools:context="com.example.iyashwant.spiderprojectprototype.Login2"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
 
     <EditText
-        android:layout_width="302dp"
+        android:id="@+id/email"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/bubble"
-        android:gravity="center_vertical"
-        android:paddingLeft="32sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="280sp"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
         android:hint="Email"
-        android:textColor="#ffffff"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:paddingLeft="32sp" />
 
     <EditText
-        android:layout_width="0dp"
+        android:id="@+id/password"
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/bubble"
-        android:gravity="center_vertical"
-        android:paddingLeft="32dp"
+        android:layout_below="@+id/email"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
         android:hint="Password"
-        android:textColor="#ffffff"
-        android:id="@+id/textView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.499" />
+        android:paddingLeft="32sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,14 +43,10 @@
         android:clickable="true"
         android:text="Forgot Password?"
         android:textColor="#ffffff"
-        android:id="@+id/textView2"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="39dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="54dp" />
+        android:id="@+id/forgot_password"
+        android:layout_below="@+id/password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp" />
 
     <Button
         android:layout_width="100dp"
@@ -77,13 +56,9 @@
         android:gravity="center"
         android:background="@drawable/button_round"
         android:id="@+id/btnCraftsmen"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_below="@+id/btnClients"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
     <Button
         android:layout_width="100dp"
@@ -93,12 +68,8 @@
         android:gravity="center"
         android:background="@drawable/button_round"
         android:id="@+id/btnClients"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="105dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_below="@+id/forgot_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="37dp" />
 
-</android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
