--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -18,8 +18,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-    </VideoView>
+        android:layout_height="fill_parent"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -144,6 +143,57 @@
             fab:fab_label="Exit App"
             fab:fab_size="normal" />
     </com.github.clans.fab.FloatingActionMenu>
+
+
+    <RelativeLayout
+        android:id="@+id/webhold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#323232"
+        android:layout_margin="30sp"
+        android:elevation="10dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30sp"
+                android:text="Login"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textStyle="bold"/>
+
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:text="Close"
+            android:background="#ff004e"
+            android:textSize="12sp"
+            android:id="@+id/webclose"
+            android:layout_alignParentBottom="true"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
