--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -16,16 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-        <!--
-        <ImageView
-            android:id="@+id/imgview"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_twentyfour"
-            android:layout_centerHorizontal="true"/>
-            -->
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,9 +45,8 @@
 
             <ImageView
                 android:layout_centerHorizontal="true"
-                android:id="@+id/craftsmen"
+                android:id="@+id/craftsman_reg"
                 android:tint="#ffffff"
-                android:onClick="regcraftsmen"
                 android:src="@drawable/ic_person"
                 android:layout_width="100dp"
                 android:layout_height="70dp"/>
@@ -69,7 +58,7 @@
                 android:gravity="center"
                 android:textColor="#ffffff"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/craftsmen"/>
+                android:layout_below="@id/craftsman_reg"/>
 
         </RelativeLayout>
 
@@ -84,9 +73,8 @@
             <ImageView
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/ic_movie"
-                android:id="@+id/client"
-                android:tint="#000000"
-                android:onClick="regclient"
+                android:id="@+id/client_reg"
+                android:tint="#ffffff"
                 android:layout_width="100dp"
                 android:layout_height="70dp"/>
 
@@ -95,8 +83,8 @@
                 android:layout_width="100dp"
                 android:text="Client"
                 android:gravity="center"
-                android:textColor="#000000"
-                android:layout_below="@id/client"/>
+                android:textColor="#ffffff"
+                android:layout_below="@id/client_reg"/>
 
         </RelativeLayout>
 
