--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -267,7 +267,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/verification_done"
         android:layout_width="360dp"
         android:layout_height="40dp"
         android:layout_marginTop="110dp"
