--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -1,60 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="#50000000"
+    android:layout_height="220sp"
     android:gravity="bottom"
-    android:orientation="horizontal"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:weightSum="2">
-
+    android:id="@+id/nav_header_crafts">
 
     <ImageView
-        android:id="@+id/nav_pic"
-        android:layout_width="0sp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:id="@+id/coverpic"
+        android:src="@drawable/audition_sample"
+        android:scaleType="fitXY" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#90000000"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="6">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/nav_pic"
+        android:layout_height="0sp"
+        android:src="@drawable/sample1"
+        android:layout_weight="4"
+        android:elevation="20sp"
+        android:layout_margin="5sp"
+        android:layout_width="match_parent"
+        android:padding="2sp"
+        app:srcCompat="@mipmap/ic_launcher_round"/>
 
 
     <LinearLayout
-        android:layout_width="0sp"
-        android:layout_height="wrap_content"
+        android:layout_height="0sp"
+        android:layout_width="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:weightSum="3">
 
         <TextView
             android:id="@+id/nav_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10sp"
+            android:layout_height="0sp"
+            android:layout_weight="2"
+            android:layout_margin="5sp"
             android:text="Name"
+            android:textSize="25sp"
             android:textColor="#ffffff"
-            android:textSize="20sp" />
+            android:textAlignment="center"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="sans-serif-condensed" />
 
         <TextView
             android:id="@+id/nav_craft"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nav_name"
+            android:layout_height="0sp"
+            android:layout_weight="1"
             android:text="Craft"
             android:textColor="#ffffff"
-            android:textSize="15sp"
-            android:layout_marginBottom="20sp"/>
-
-        <ImageButton
-            android:id="@+id/profile_edits"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffffff"
-            android:padding="10sp"
-            android:src="@drawable/edit_white" />
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="12sp"
+            android:layout_marginBottom="15sp"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
 
 </LinearLayout>
+
+
+
+</RelativeLayout>
