--- a/app/src/main/res/layout/nav_header_main3.xml
+++ b/app/src/main/res/layout/nav_header_main3.xml
@@ -1,104 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="220dp"
-    android:background="#50000000"
     android:orientation="vertical"
-    android:weightSum="4"
+    android:id="@+id/nav_header_clients"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/coverpic"
+        android:src="@drawable/audition_sample"
+        android:scaleType="fitXY" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#90000000"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="3.25"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <ImageView
-            android:id="@+id/nav_pic"
-            android:layout_width="0sp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:padding="25sp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
-
+        android:layout_height="match_parent"
+        android:weightSum="4"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
+            android:id="@+id/header_for_clients"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="3.25"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:weightSum="6">
 
-            <TextView
-                android:id="@+id/nav_name"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/nav_pic"
+                android:layout_height="0sp"
+                android:src="@drawable/sample1"
+                android:layout_weight="4"
+                android:elevation="20sp"
+                android:layout_margin="5sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10sp"
-                android:text="Name"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:layout_marginTop="20sp"/>
+                android:padding="2sp"
+                app:srcCompat="@mipmap/ic_launcher_round"/>
 
-            <TextView
-                android:id="@+id/nav_craft"
+
+            <LinearLayout
+                android:layout_height="0sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/nav_name"
-                android:text="Craft"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                android:layout_marginBottom="20sp"/>
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:weightSum="3">
 
-            <ImageButton
-                android:id="@+id/profile_edits"
-                android:layout_width="44dp"
-                android:layout_height="43dp"
-                android:background="#00ffffff"
-                android:padding="10sp"
-                android:src="@drawable/edit_white" />
+                <TextView
+                    android:id="@+id/nav_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="0sp"
+                    android:layout_weight="2"
+                    android:layout_margin="5sp"
+                    android:text="Name"
+                    android:textSize="25sp"
+                    android:textColor="#ffffff"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="sans-serif-condensed" />
+
+                <TextView
+                    android:id="@+id/nav_craft"
+                    android:layout_width="match_parent"
+                    android:layout_height="0sp"
+                    android:layout_weight="1"
+                    android:text="Craft"
+                    android:textColor="#ffffff"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textSize="12sp"
+                    android:textAlignment="center"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="3.25"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <ImageView
+                android:id="@+id/nav_pic"
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:padding="25sp"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+
+            <LinearLayout
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <TextView
+                    android:id="@+id/nav_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp"
+                    android:text="Name"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:layout_marginTop="20sp"/>
+
+                <TextView
+                    android:id="@+id/nav_craft"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/nav_name"
+                    android:text="Craft"
+                    android:textColor="#ffffff"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="20sp"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="0.75"
+            android:weightSum="3"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/aud_handy"
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/aud_handy"
+                android:scaleType="fitCenter"
+                android:layout_margin="5sp"/>
+
+            <ImageView
+                android:id="@+id/fav_handy"
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/fav_handy"
+                android:scaleType="fitCenter"
+                android:layout_margin="5sp"/>
+
+            <ImageView
+                android:id="@+id/inbox_handy"
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/inbox_handy"
+                android:scaleType="fitCenter"
+                android:layout_margin="5sp"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="0.75"
-        android:weightSum="3"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/aud_handy"
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/aud_handy"
-            android:scaleType="fitCenter"
-            android:layout_margin="5sp"/>
-
-        <ImageView
-            android:id="@+id/fav_handy"
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/fav_handy"
-            android:scaleType="fitCenter"
-            android:layout_margin="5sp"/>
-
-        <ImageView
-            android:id="@+id/inbox_handy"
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/inbox_handy"
-            android:scaleType="fitCenter"
-            android:layout_margin="5sp"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
