--- a/app/src/main/res/layout/activity_signup3.xml
+++ b/app/src/main/res/layout/activity_signup3.xml
@@ -7685,6 +7685,7 @@
         android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:text="Next"
+        android:onClick="recaptcha"
         android:textColor="#ffffff"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="25dp"
