--- a/app/src/main/res/layout/activity_signup3client.xml
+++ b/app/src/main/res/layout/activity_signup3client.xml
@@ -2,7 +2,6 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@mipmap/wall"
-    tools:context="com.example.iyashwant.spiderprojectprototype.signup3"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait"
@@ -162,5 +161,7 @@
         <TextView android:layout_width="0sp" android:layout_weight="1" android:background="#dddddd" android:layout_height="match_parent"/>
         <TextView android:layout_width="0sp" android:layout_weight="1" android:layout_height="match_parent"/>
     </LinearLayout>
-    <Button android:id="@+id/button3" android:layout_width="match_parent" android:layout_height="40dp" android:layout_alignParentBottom="true" android:background="@drawable/button_round" android:gravity="center" android:layout_gravity="center_horizontal" android:text="Next" android:textColor="#ffffff" android:layout_marginBottom="5dp" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="5dp"/>
+    <Button android:id="@+id/button3" android:layout_width="match_parent" android:layout_height="40dp" android:layout_alignParentBottom="true" android:background="@drawable/button_round" android:gravity="center" android:layout_gravity="center_horizontal" android:text="Next" android:textColor="#ffffff" android:layout_marginBottom="5dp"
+        android:onClick="captcha"
+        android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="5dp"/>
 </RelativeLayout>
